// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Character test suite should render only four eps 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ hGjtOu"
  >
    <img
      class="sc-gsnTZi wtJol"
      src="https//rickandmortyapi.com/api/character/avatar/1.jpeg"
    />
    <h2
      class="sc-dkzDqf bOavjn"
    >
      Rick Sanchez
    </h2>
    <p
      class="sc-hKMtZM fuiNwc"
    >
      Origem: 
    </p>
    <p
      class="sc-eCYdqJ kElERB"
    >
      Earth (C-137)
    </p>
    <p
      class="sc-hKMtZM fuiNwc"
    >
      Localização: 
    </p>
    <p
      class="sc-eCYdqJ kElERB"
    >
      Citadel of Ricks
    </p>
    <p
      class="sc-hKMtZM fuiNwc"
    >
      Episódios: 
    </p>
    <p
      class="sc-eCYdqJ kElERB"
    >
      Pilot - Lawnmower Dog - Anatomy Park - M. Night Shaym-Aliens!; +Mais
    </p>
  </div>
</DocumentFragment>
`;

exports[`Character test suite should render only two eps 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ hGjtOu"
  >
    <img
      class="sc-gsnTZi wtJol"
      src="https//rickandmortyapi.com/api/character/avatar/1.jpeg"
    />
    <h2
      class="sc-dkzDqf bOavjn"
    >
      Rick Sanchez
    </h2>
    <p
      class="sc-hKMtZM fuiNwc"
    >
      Origem: 
    </p>
    <p
      class="sc-eCYdqJ kElERB"
    >
      Earth (C-137)
    </p>
    <p
      class="sc-hKMtZM fuiNwc"
    >
      Localização: 
    </p>
    <p
      class="sc-eCYdqJ kElERB"
    >
      Citadel of Ricks
    </p>
    <p
      class="sc-hKMtZM fuiNwc"
    >
      Episódios: 
    </p>
    <p
      class="sc-eCYdqJ kElERB"
    >
      Pilot - Lawnmower Dog
    </p>
  </div>
</DocumentFragment>
`;
